# data-science-eval-runner

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  context.md  data.db  generate_ground_truth_all.py  package-lock.json  package.json  pyproject.toml  setup.cfg  tsconfig.json
data/: customers.csv  locations.csv  reviews.csv  time_series.csv  transactions.csv
ds_runner/: __init__.py  __main__.py
examples/: sample_ds_agent.py
problems/: customer_segmentation_002.yaml  customer_segmentation_002_ground_truth.json  sales_analysis_001.yaml  sales_analysis_001_ground_truth.json  time_series_forecast_003.yaml  time_series_forecast_003_ground_truth.json
src/: claude-agent-cli.ts  claude-agent.ts  cli_runner.py  computer-use-mcp.ts  data_generator.py  ds_agent.py  ds_evaluator.py  env.ts  sepal-utilities.ts
taiga/: __main__.py  math_in_python.py  spec.py
taiga-evals/: README.md
taiga-evals/libreoffice-easy1/: Dockerfile  problems-metadata.json  pyproject.toml
taiga-evals/libreoffice-easy1/image/: entrypoint.sh
taiga-evals/libreoffice-easy1/image/.config/tint2/: tint2rc
taiga-evals/libreoffice-easy1/image/.config/tint2/applications/: libreoffice-calc-custom.desktop
taiga-evals/libreoffice-easy1/image/outputs/: accounts.csv  accounts.ods
taiga-evals/libreoffice-easy1/image/startup/: mutter_startup.sh  novnc_startup.sh  tint2_startup.sh
taiga-evals/libreoffice-easy1/src/libreoffice_easy1/: __main__.py  libreoffice_easy1.py
taiga-evals/libreoffice-hard1/: Dockerfile  problems-metadata.json  pyproject.toml
taiga-evals/libreoffice-hard1/image/: entrypoint.sh
taiga-evals/libreoffice-hard1/image/.config/tint2/applications/: firefox-custom.desktop
taiga-evals/libreoffice-hard1/image/inputs/: transaction_data.ods
taiga-evals/libreoffice-hard1/image/outputs/: transaction_data_analysis.csv  transaction_data_analysis.ods
taiga-evals/libreoffice-hard1/image/startup/: mutter_startup.sh  novnc_startup.sh  tint2_startup.sh  x11vnc_startup.sh
taiga-evals/libreoffice-hard1/src/libreoffice_hard1/: __main__.py  libreoffice_hard1.py
taiga-evals/libreoffice-hard2/: Dockerfile  problems-metadata.json  pyproject.toml
taiga-evals/libreoffice-hard2/image/: entrypoint.sh
taiga-evals/libreoffice-hard2/image/.config/tint2/applications/: libreoffice-calc-custom.desktop
taiga-evals/libreoffice-hard2/image/inputs/: global_customers.ods
taiga-evals/libreoffice-hard2/image/outputs/: global_customers_summarized.csv  global_customers_summarized.ods
taiga-evals/libreoffice-hard2/image/startup/: x11vnc_startup.sh  xvfb_startup.sh
taiga-evals/libreoffice-hard2/src/libreoffice_hard2/: __main__.py  libreoffice_hard2.py
taiga/tools/: base.py  bash.py  computer.py  edit.py  run.py
tests/: conftest.py  problems-metadata-schema.json  test_bash_tool_deps.py  test_cu_tool_deps.py  test_docker_usage.py  test_integration.py  test_metadata_schema.py
