[project]
name = "ds-runner"
version = "0.1.0"
description = "Data Science Agent Evaluation System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0", 
    "mcp[cli]>=1.3.0", 
    "jsonschema>=4.21.0", 
    "numpy>=1.26.0", 
    "fastapi>=0.110.0", 
    "uvicorn>=0.28.0",
    # Data Science Agent dependencies
    "pandas>=2.0.0",
    "duckdb>=0.8.0",
    "faker>=18.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "docker>=6.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.9.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff==0.11.2", "pre-commit>=3.5.0"]

[project.scripts]
ds-runner = "ds_runner.__main__:app"
ds-eval = "src.cli_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "validate_env: marks tests that validate Docker environment"
]
filterwarnings = [
    "ignore::PendingDeprecationWarning:starlette.*"
]
