[project]
name = "libreoffice_hard1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = ["anthropic>=0.49.0", "mcp[cli]>=1.3.0", "selenium>=4.31.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff==0.11.2", "pre-commit>=3.5.0"]

[project.scripts]
libreoffice_hard1 = "libreoffice_hard1.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
